--- a/less/CA.less
+++ b/less/CA.less
@@ -15,7 +15,8 @@
             font-size:18px;
             font-weight: 700;
             color:#000;
-            font-family:"Roboto";
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 700;
             margin:0 10px;}}
     padding:50px;
     display:flex;
@@ -42,32 +43,37 @@
     .paragraph{
         margin: 0px 100px 50px 100px;
         min-width:300px;
-        max-width:700px;
+        max-width:750px;
         h2{
             font-weight: 700;
             font-size: 65px;
-            font-family:"Roboto"; } 
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 700;} 
         p{
             font-size:24px;
             font-weight: 700;
-            font-family:"Roboto";} }
+            font-family: 'Montserrat', sans-serif;
+        font-weight: 700;} }
     .forma{
         margin-right:150px;
         margin-left:50px;
         form{
             background-color:#eee;
-            padding:10px;
+            padding:15px;
             border-radius: 15px;
             display:flex;
             flex-direction: column;
             >*{
                 border-style: none;
-                margin:10px;
-                height:50px;
-                width:285px;
+                margin:15px;
+                height:60px;
+                width:345px;
             }
             input{
                 padding-left:15px;
+                font-size:18px;
+                font-family: 'Montserrat', sans-serif;
+                font-weight: 700;
             }
             button{
                 background-color:deepskyblue;
@@ -75,6 +81,9 @@
                 color:#FFF;
                 cursor:pointer;
                 text-transform: uppercase;
+                font-family: 'Montserrat', sans-serif;
+                font-weight: 700;
+                font-size: 18px;
                 
             }
         }
