--- a/less/CA.less
+++ b/less/CA.less
@@ -46,14 +46,13 @@
         max-width:750px;
         h2{
             font-weight: 700;
-            font-size: 65px;
+            font-size: 60px;
             font-family: 'Montserrat', sans-serif;
             font-weight: 700;} 
         p{
-            font-size:24px;
-            font-weight: 700;
+            font-size:26px;
             font-family: 'Montserrat', sans-serif;
-        font-weight: 700;} }
+        font-weight: 600;} }
     .forma{
         margin-right:150px;
         margin-left:50px;
@@ -71,9 +70,9 @@
             }
             input{
                 padding-left:15px;
-                font-size:18px;
+                font-size:16px;
                 font-family: 'Montserrat', sans-serif;
-                font-weight: 700;
+                //color:#bbb;
             }
             button{
                 background-color:deepskyblue;
@@ -82,7 +81,6 @@
                 cursor:pointer;
                 text-transform: uppercase;
                 font-family: 'Montserrat', sans-serif;
-                font-weight: 700;
                 font-size: 18px;
                 
             }
