--- a/less/CA.less
+++ b/less/CA.less
@@ -102,3 +102,86 @@ flex-wrap: nowrap;
         }
     }
                                         }}
+.table1{
+    margin:50px auto;
+    background-color:darkgoldenrod;
+    
+
+    th{
+        font-family: 'Montserrat', sans-serif;
+        font-size:32px;
+        padding:40px 60px;
+        background-color: lightgoldenrodyellow;
+    }
+
+tr{
+    border:2px solid darkgoldenrod;
+    background-color:darkblue;
+    td{
+        padding:40px 20px;
+        font-family: 'Montserrat', sans-serif;
+        font-size:28px;
+        color:#FFF;
+        width:500px;
+    }
+    
+    }
+th:hover{
+    background-color:darkgoldenrod;
+    }  }
+
+
+.table2{
+    margin:50px auto;
+    border-collapse: collapse;
+    
+    th{
+        background-color:darkviolet;
+        font-family: 'Montserrat', sans-serif;
+        font-size:28px;
+        padding:20px 30px;
+        
+    }
+    tr:nth-child(even){
+        background-color:darkorchid;
+    }
+    tr:nth-child(odd){
+        background-color:fuchsia
+    }
+    tr, th, td {
+        border:2px solid white;
+    }
+    tr{
+    td{
+        padding:40px 20px;
+        font-family: 'Montserrat', sans-serif;
+        font-size:28px;
+        color:#FFF;
+        width:300px;
+    }
+    
+    }
+}
+
+.table3{
+    
+    margin:50px auto;
+    border-collapse: collapse;
+    tr,th,td{
+        border: 2px solid black;
+    }
+    th{
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 700;
+        font-size:28px;
+        padding:20px 30px;
+        text-align: left;
+    }
+    td{
+        font-family: 'Montserrat', sans-serif;
+        font-size:22px;
+        width:300px;
+        padding: 10px 5px;
+    }
+}
+    
